# photo

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: server.py
config/: app.env  frame_cleaner.conf
data/work/Pinched/frames/: descriptions.json
db/: gallery.db  init_db.sh  migrate_add_media_kind.sh  schema.sql
db/migrations/: 003_add_media_kind.sql
docs/: VIDEO_PIPELINE.md
frontend/: app.js  index.html  styles.css
lib/: config.py
